# metastat

./: README.md  pyproject.toml
src/metastat/: __init__.py  asym.py  infer.py  result.py  stat.py  test.py
tests/: test_api.py
